Add a preprint by Yimin, Davar, Swanson and Zhang

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 410582b88ebce5aaa51fe075472bbc7fefca9a06
-% Date: 2023-10-29
+% Commit: a05a6341914a34976f8215958a2c6e7d043e9811
+% Date: 2023-10-30
 % ---------------------------
 
 
@@ -2752,22 +2752,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {The stochastic wave equation with fractional noise: a random field approach},
-  journal       = {Stochastic Process. Appl.},
-  fjournal      = {Stochastic Processes and their Applications},
-  volume        = {120},
-  year          = {2010},
-  number        = {12},
-  pages         = {2468--2494},
-  issn          = {0304-4149},
-  mrclass       = {60H15 (60G60 60H05)},
-  mrnumber      = {2728174},
-  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
-  doi           = {10.1016/j.spa.2010.08.006},
-  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {Stochastic heat equation with multiplicative fractional-colored noise},
   journal       = {J. Theoret. Probab.},
   fjournal      = {Journal of Theoretical Probability},
@@ -2781,6 +2765,22 @@
   mrreviewer    = {David Nualart},
   doi           = {10.1007/s10959-009-0237-3},
   url           = {https://doi.org/10.1007/s10959-009-0237-3}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {The stochastic wave equation with fractional noise: a random field approach},
+  journal       = {Stochastic Process. Appl.},
+  fjournal      = {Stochastic Processes and their Applications},
+  volume        = {120},
+  year          = {2010},
+  number        = {12},
+  pages         = {2468--2494},
+  issn          = {0304-4149},
+  mrclass       = {60H15 (60G60 60H05)},
+  mrnumber      = {2728174},
+  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
+  doi           = {10.1016/j.spa.2010.08.006},
+  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -12197,7 +12197,20 @@
   doi           = {10.1016/S0167-7152(99)00163-7},
   url           = {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
-@article{chen:00:on,
+@incollection{chen:00:on,
+  author        = {Chen, Xia},
+  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
+  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
+  series        = {Progr. Probab.},
+  volume        = {47},
+  pages         = {249--259},
+  publisher     = {Birkh\"{a}user Boston, Boston, MA},
+  year          = {2000},
+  mrclass       = {60F15 (60J55)},
+  mrnumber      = {1857326},
+  mrreviewer    = {Ingemar Kaj}
+}
+@article{chen:00:on*1,
   author        = {Chen, Xia},
   title         = {On the limit laws of the second order for additive functionals of {H}arris recurrent {M}arkov chains},
   journal       = {Probab. Theory Related Fields},
@@ -12211,19 +12224,6 @@
   mrnumber      = {1736591},
   doi           = {10.1007/PL00008724},
   url           = {https://doi.org/10.1007/PL00008724}
-}
-@incollection{chen:00:on*1,
-  author        = {Chen, Xia},
-  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
-  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
-  series        = {Progr. Probab.},
-  volume        = {47},
-  pages         = {249--259},
-  publisher     = {Birkh\"{a}user Boston, Boston, MA},
-  year          = {2000},
-  mrclass       = {60F15 (60J55)},
-  mrnumber      = {1857326},
-  mrreviewer    = {Ingemar Kaj}
 }
 @article{chen:01:exact,
   author        = {Chen, Xia},
@@ -16353,21 +16353,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization of crumpled manifolds},
-  journal       = {Phys. Rev. Lett.},
-  fjournal      = {Physical Review Letters},
-  volume        = {70},
-  year          = {1993},
-  number        = {15},
-  pages         = {2205--2208},
-  issn          = {0031-9007},
-  mrclass       = {82B41 (81T17 81T30 82B28)},
-  mrnumber      = {1214561},
-  doi           = {10.1103/PhysRevLett.70.2205},
-  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization theory for interacting crumpled manifolds},
   journal       = {Nuclear Phys. B},
   fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
@@ -16380,6 +16365,21 @@
   mrnumber      = {1215176},
   doi           = {10.1016/0550-3213(93)90226-F},
   url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization of crumpled manifolds},
+  journal       = {Phys. Rev. Lett.},
+  fjournal      = {Physical Review Letters},
+  volume        = {70},
+  year          = {1993},
+  number        = {15},
+  pages         = {2205--2208},
+  issn          = {0031-9007},
+  mrclass       = {82B41 (81T17 81T30 82B28)},
+  mrnumber      = {1214561},
+  doi           = {10.1103/PhysRevLett.70.2205},
+  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -29794,22 +29794,6 @@
 }
 @article{huang.le.ea:17:large,
   author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title         = {Large time asymptotics for the parabolic {A}nderson model driven by space and time correlated noise},
-  journal       = {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal      = {Stochastic Partial Differential Equations. Analysis and Computations},
-  volume        = {5},
-  year          = {2017},
-  number        = {4},
-  pages         = {614--651},
-  issn          = {2194-0401},
-  mrclass       = {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber      = {3736656},
-  mrreviewer    = {Xia Chen},
-  doi           = {10.1007/s40072-017-0099-0},
-  url           = {https://doi.org/10.1007/s40072-017-0099-0}
-}
-@article{huang.le.ea:17:large*1,
-  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title         = {Large time asymptotics for the parabolic {A}nderson model driven by spatially correlated noise},
   journal       = {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal      = {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s et Statistiques},
@@ -29823,6 +29807,22 @@
   mrreviewer    = {Xia Chen},
   doi           = {10.1214/16-AIHP756},
   url           = {https://doi.org/10.1214/16-AIHP756}
+}
+@article{huang.le.ea:17:large*1,
+  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title         = {Large time asymptotics for the parabolic {A}nderson model driven by space and time correlated noise},
+  journal       = {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal      = {Stochastic Partial Differential Equations. Analysis and Computations},
+  volume        = {5},
+  year          = {2017},
+  number        = {4},
+  pages         = {614--651},
+  issn          = {2194-0401},
+  mrclass       = {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber      = {3736656},
+  mrreviewer    = {Xia Chen},
+  doi           = {10.1007/s40072-017-0099-0},
+  url           = {https://doi.org/10.1007/s40072-017-0099-0}
 }
 @article{huang.le:19:spatial,
   author        = {Huang, Jingyu and L\^{e}, Khoa},
@@ -32042,6 +32042,14 @@
   mrnumber      = {2475679},
   doi           = {10.1007/s00440-008-0184-4},
   url           = {https://doi.org/10.1007/s00440-008-0184-4}
+}
+@article{khoshnevisan.swanson.ea:13:weak,
+  title         = {Weak existence of a solution to a differential equation driven by a very rough fBm},
+  author        = {Davar Khoshnevisan and Jason Swanson and Yimin Xiao and Liang Zhang},
+  year          = {2013},
+  month         = {September},
+  journal       = {preprint arXiv:1309.3613},
+  url           = {http://arXiv.org/abs/1309.3613}
 }
 @article{khoshnevisan.waymire:17:conversation,
   author        = {Khoshnevisan, Davar and Waymire, Edward},
@@ -41629,22 +41637,6 @@
 }
 @article{nourdin.simon:06:on,
   author        = {Nourdin, Ivan and Simon, Thomas},
-  title         = {On the absolute continuity of {L}\'{e}vy processes with drift},
-  journal       = {Ann. Probab.},
-  fjournal      = {The Annals of Probability},
-  volume        = {34},
-  year          = {2006},
-  number        = {3},
-  pages         = {1035--1051},
-  issn          = {0091-1798},
-  mrclass       = {60G51 (60H10)},
-  mrnumber      = {2243878},
-  mrreviewer    = {Tina M. Marquardt},
-  doi           = {10.1214/009117905000000620},
-  url           = {https://doi.org/10.1214/009117905000000620}
-}
-@article{nourdin.simon:06:on*1,
-  author        = {Nourdin, Ivan and Simon, Thomas},
   title         = {On the absolute continuity of one-dimensional {SDE}s driven by a fractional {B}rownian motion},
   journal       = {Statist. Probab. Lett.},
   fjournal      = {Statistics \& Probability Letters},
@@ -41658,6 +41650,22 @@
   mrreviewer    = {Andreas Neuenkirch},
   doi           = {10.1016/j.spl.2005.10.021},
   url           = {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+@article{nourdin.simon:06:on*1,
+  author        = {Nourdin, Ivan and Simon, Thomas},
+  title         = {On the absolute continuity of {L}\'{e}vy processes with drift},
+  journal       = {Ann. Probab.},
+  fjournal      = {The Annals of Probability},
+  volume        = {34},
+  year          = {2006},
+  number        = {3},
+  pages         = {1035--1051},
+  issn          = {0091-1798},
+  mrclass       = {60G51 (60H10)},
+  mrnumber      = {2243878},
+  mrreviewer    = {Tina M. Marquardt},
+  doi           = {10.1214/009117905000000620},
+  url           = {https://doi.org/10.1214/009117905000000620}
 }
 @article{nourdin.simon:07:correcting,
   author        = {Nourdin, Ivan and Simon, Thomas},
@@ -42459,19 +42467,6 @@
 }
 @article{nualart.sanz:85:malliavin,
   author        = {Nualart, D. and Sanz, M.},
-  title         = {Malliavin calculus for two-parameter processes},
-  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number        = {3},
-  year          = {1985},
-  pages         = {73--86},
-  issn          = {0246-1501},
-  mrclass       = {60H15 (60G60 60H07)},
-  mrnumber      = {790724},
-  mrreviewer    = {M. Zakai}
-}
-@article{nualart.sanz:85:malliavin*1,
-  author        = {Nualart, D. and Sanz, M.},
   title         = {Malliavin calculus for two-parameter {W}iener functionals},
   journal       = {Z. Wahrsch. Verw. Gebiete},
   fjournal      = {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
@@ -42485,6 +42480,19 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00531868},
   url           = {https://doi.org/10.1007/BF00531868}
+}
+@article{nualart.sanz:85:malliavin*1,
+  author        = {Nualart, D. and Sanz, M.},
+  title         = {Malliavin calculus for two-parameter processes},
+  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number        = {3},
+  year          = {1985},
+  pages         = {73--86},
+  issn          = {0246-1501},
+  mrclass       = {60H15 (60G60 60H07)},
+  mrnumber      = {790724},
+  mrreviewer    = {M. Zakai}
 }
 @article{nualart.sanz:89:stochastic,
   author        = {Nualart, D. and Sanz, M.},
@@ -49354,22 +49362,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {96},
-  year          = {1993},
-  number        = {2},
-  pages         = {241--260},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1227034},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01192135},
-  url           = {https://doi.org/10.1007/BF01192135}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -49383,6 +49375,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01199314},
   url           = {https://doi.org/10.1007/BF01199314}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {96},
+  year          = {1993},
+  number        = {2},
+  pages         = {241--260},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1227034},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01192135},
+  url           = {https://doi.org/10.1007/BF01192135}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -50897,6 +50905,21 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -50910,21 +50933,6 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -50944,6 +50952,20 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -50957,20 +50979,6 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -52019,22 +52027,6 @@
 }
 @article{tracy.widom:09:on,
   author        = {Tracy, Craig A. and Widom, Harold},
-  title         = {On the distribution of a second-class particle in the asymmetric simple exclusion process},
-  journal       = {J. Phys. A},
-  fjournal      = {Journal of Physics. A. Mathematical and Theoretical},
-  volume        = {42},
-  year          = {2009},
-  number        = {42},
-  pages         = {425002, 6},
-  issn          = {1751-8113},
-  mrclass       = {60K35 (82C22)},
-  mrnumber      = {2546037},
-  mrreviewer    = {Pablo A. Ferrari},
-  doi           = {10.1088/1751-8113/42/42/425002},
-  url           = {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-@article{tracy.widom:09:on*1,
-  author        = {Tracy, Craig A. and Widom, Harold},
   title         = {On {ASEP} with step {B}ernoulli initial condition},
   journal       = {J. Stat. Phys.},
   fjournal      = {Journal of Statistical Physics},
@@ -52048,6 +52040,22 @@
   mrreviewer    = {Timo Sepp\"{a}l\"{a}inen},
   doi           = {10.1007/s10955-009-9867-1},
   url           = {https://doi.org/10.1007/s10955-009-9867-1}
+}
+@article{tracy.widom:09:on*1,
+  author        = {Tracy, Craig A. and Widom, Harold},
+  title         = {On the distribution of a second-class particle in the asymmetric simple exclusion process},
+  journal       = {J. Phys. A},
+  fjournal      = {Journal of Physics. A. Mathematical and Theoretical},
+  volume        = {42},
+  year          = {2009},
+  number        = {42},
+  pages         = {425002, 6},
+  issn          = {1751-8113},
+  mrclass       = {60K35 (82C22)},
+  mrnumber      = {2546037},
+  mrreviewer    = {Pablo A. Ferrari},
+  doi           = {10.1088/1751-8113/42/42/425002},
+  url           = {https://doi.org/10.1088/1751-8113/42/42/425002}
 }
 @article{tracy.widom:09:total,
   author        = {Tracy, Craig A. and Widom, Harold},
